# ulysses-ground-control

./: .gitignore  .gitmodules  AlarmReceiver.cpp  AlarmReceiver.h  CMakeLists.txt  CommandSender.cpp  CommandSender.h  DataBox.qml  LayoutGrid.qml  Main.qml  Panel_Baro_And_Telemetry_Data.qml  Panel_Baro_Data.qml  Panel_Control.qml  Panel_Engine_Control.qml  Panel_IMU_And_Kalman_Data.qml  Panel_IMU_Data.qml  Panel_Kalman_Filtered_Angle.qml  Panel_Rocket_Visualization.qml  Panel_System_Alert.qml  Panel_Telemetry_Data.qml  Panel_Test.qml  Parameters.qml  README.md  RadioTestWindow.qml  SensorDataModel.cpp  SensorDataModel.h  SerialBridge.cpp  SerialBridge.h  Shortcuts.qml  flight_command.pb.c  flight_command.pb.h  flight_command.proto  main.cpp  test_orchestrator.py
FullDroneAssembly/: FullDroneAssembly.gltf
Head Files/: CommandSender.h  SensorDataModel.h  SerialBridge.h
HeadFiles/: AlarmReceiver.h  CommandSender.h  DownlinkDecoder.h  SensorDataModel.h  SerialBridge.h
Items/: BaseHeader.qml  BasePanel.qml  BaseResize.qml  Data.qml  DataBox.qml  DataBoxList.qml  Header.qml
Panels/: Panel_Baro_And_Telemetry_Data.qml  Panel_Control.qml  Panel_Engine_Control.qml  Panel_IMU_And_Kalman_Data.qml  Panel_Rocket_Visualization.qml  Panel_System_Alert.qml  Panel_Test.qml
QML Files/: Header.qml  LayoutGrid.qml  Main.qml  Panel_Baro_And_Telemetry_Data.qml  Panel_Control.qml  Panel_Engine_Control.qml  Panel_IMU_And_Kalman_Data.qml  Panel_Kalman_and_Engine.qml  Panel_PID_Slider.qml  Panel_Rocket_Visualization.qml  Panel_System_Alert.qml  RadioTestWindow.qml  SettingsPage.qml
QML Files/Items/: BaseHeader.qml  BasePanel.qml  DataBoxList.qml
QMLFiles/: FullDroneAssembly.qml  Header.qml  LayoutGrid.qml  Main.qml  Panel_Baro_And_Telemetry_Data.qml  Panel_Control.qml  Panel_Kalman_and_Engine.qml  Panel_PID_Slider.qml  Panel_Rocket_Visualization.qml  Panel_System_Alert.qml  Panel_System_Health.qml  Panel_Test.qml  RadioOutputWindow.qml  RadioTestWindow.qml  Shortcuts.qml
QMLFiles/Items/: BaseHeader.qml  BasePanel.qml  CommandCard.qml  DataBox.qml  DataBoxList.qml  Theme.qml
QMLFiles/Panels/: Panel_Angles_And_Engine.qml  Panel_Baro_And_Telemetry_Data.qml  Panel_Control.qml  Panel_Kalman_and_Engine.qml  Panel_PID_Controller.qml  Panel_PID_Slider.qml  Panel_Rocket_Visualization.qml  Panel_State_And_Position.qml  Panel_System_Alert.qml  Panel_System_Health.qml
QMLFiles/meshes/: meshes_0__mesh.mesh  meshes_10__mesh.mesh  meshes_11__mesh.mesh  meshes_12__mesh.mesh  meshes_13__mesh.mesh  meshes_14__mesh.mesh  meshes_15__mesh.mesh  meshes_16__mesh.mesh  meshes_17__mesh.mesh  meshes_18__mesh.mesh  meshes_19__mesh.mesh  meshes_1__mesh.mesh  meshes_20__mesh.mesh  meshes_21__mesh.mesh  meshes_22__mesh.mesh  meshes_23__mesh.mesh  meshes_24__mesh.mesh  meshes_25__mesh.mesh  meshes_26__mesh.mesh  meshes_27__mesh.mesh  meshes_28__mesh.mesh  meshes_29__mesh.mesh  meshes_2__mesh.mesh  meshes_30__mesh.mesh  meshes_31__mesh.mesh  meshes_32__mesh.mesh  meshes_33__mesh.mesh  meshes_34__mesh.mesh  meshes_35__mesh.mesh  meshes_36__mesh.mesh  meshes_37__mesh.mesh  meshes_38__mesh.mesh  meshes_39__mesh.mesh  meshes_3__mesh.mesh  meshes_40__mesh.mesh  meshes_41__mesh.mesh  meshes_42__mesh.mesh  meshes_43__mesh.mesh  meshes_44__mesh.mesh  meshes_45__mesh.mesh  (+14 more)
Source Files/: AlarmReceiver.cpp  CommandSender.cpp  SensorDataModel.cpp  SerialBridge.cpp  main.cpp
SourceFiles/: CommandSender.cpp  DownlinkDecoder.cpp  SensorDataModel.cpp  SerialBridge.cpp  main.cpp
assets/rocket/: Rocket.qml
assets/rocket/meshes/: node3.mesh
assets/src/: rocket.STL
radio_test_2/: CMakeLists.txt  Main.qml  SerialBridge.cpp  SerialBridge.h  main.cpp
tests/: CMakeLists.txt  radio_test.cpp  test_demo.py  test_demo2.py  tst_radio_receival.qml  tst_radio_test.cpp  tst_rocket_visualization.qml
