# project(ulysses_ground_control)
# enable_testing(true)

# set(CMAKE_INCLUDE_CURRENT_DIR ON)

# set(CMAKE_AUTOMOC ON)
# find_package(Qt6 REQUIRED COMPONENTS QuickTest Test)

# qt_add_executable(tests
#     tst_radio_test.cpp
#     "../SerialBridge.cpp"
#     "../SensorDataModel.cpp"
# )
# add_test(NAME tests COMMAND tests)


# target_link_libraries(tests PRIVATE
#     Qt::Test
#     Qt::SerialPort
# )
